--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ h1{
 .menuBar>nav>ul>li>a{
   text-decoration: none;
   color: var(--White);
-  font-size: 1.8rem;
+  font-size: clamp(0.7rem, 1.2vw, 1.5rem);
   padding-bottom: 4px;
   transition: border-bottom 2s ease-in-out;
 }
